// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should disable editing and pass a warning to the filter item if at least one flow node does not exist 1`] = `
<li
  className="listItem"
>
  <ActionItem
    onClick={[Function]}
    type="Decision Instance Filter"
    warning="Flow Node(s) does not exist"
  >
    <NodeListPreview
      nodes={
        Array [
          Object {
            "id": "flowNodeThatDoesNotExist",
            "name": undefined,
          },
        ]
      }
      operator="in"
      type="executedFlowNodes"
    />
  </ActionItem>
</li>
`;

exports[`should disable editing and pass a warning to the filter item if at least one flow node does not exist 2`] = `
<li
  className="listItem"
>
  <ActionItem
    onClick={[Function]}
    type="Decision Instance Filter"
    warning="Flow Node(s) does not exist"
  >
    <span
      className="parameterName"
    >
      Flow Node Duration
    </span>
    <span
      className="filterText"
    >
      <div
        className="filterValues"
      >
        <div
          className="flowNode"
          key="flowNodeThatDoesNotExist"
        >
          <b>
            flowNodeThatDoesNotExist
          </b>
          <span>
             
            is less than
             
          </span>
          <b>
            18
             
            hours
          </b>
        </div>
      </div>
    </span>
  </ActionItem>
</li>
`;

exports[`should display a flow node duration filter 1`] = `
<li
  className="listItem"
>
  <ActionItem
    onClick={[Function]}
    type="Decision Instance Filter"
  >
    <span
      className="parameterName"
    >
      Flow Node Duration
    </span>
    <span
      className="filterText"
    >
      <div
        className="filterValues"
      >
        <div
          className="flowNode"
          key="a"
        >
          <b>
            flow node name
          </b>
          <span>
             
            is less than
             
          </span>
          <b>
            18
             
            hours
          </b>
        </div>
      </div>
    </span>
  </ActionItem>
</li>
`;

exports[`should display date preview if the filter is a date filter 1`] = `
<ul
  className="FilterList"
>
  <li
    className="listItem"
    key="0"
  >
    <ActionItem
      onClick={[Function]}
      type="Decision Instance Filter"
    >
      <DateFilterPreview
        filter={
          Object {
            "end": "2017-11-26T23:59:59",
            "start": "2017-11-16T00:00:00",
            "type": "fixed",
          }
        }
        filterType="instanceStartDate"
      />
      <span
        className="note"
      >
        * 
        Filter applies to the total instance count
      </span>
    </ActionItem>
  </li>
</ul>
`;
